[package]
name = "urlencode"
version = "1.0.2-dev"
authors = ["Skyler Hawthorne <skyler@dead10ck.com>"]
description = "A CLI utility for URL-encoding or -decoding strings"
repository = "https://github.com/dead10ck/urlencode"
readme = "README.md"
keywords = [ "urlencode", "url", "encode", "decode", "percent" ]
categories = [ "command-line-utilities", "encoding" ]
license = "MIT"
edition = "2024"

[dependencies]
percent-encoding = "2.3"
clap = { version = "4.6", features = ["derive"] }
